--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,4 +1,4 @@
 <form action='/articles' method='POST'>
-  <input type="text" name="new_article"'value="enter article here" />
+  <input type="text" name="new_article" value="enter article here" />
   <input type="submit" id="submit" value="post it!" />
 </form>
