--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,5 +1,5 @@
 <form action='/articles' method='POST'>
-  <input type="text" name="title" value="Enter title here"
+  <input type="text" id="title" value="Enter title here"
   <input type="text" id="content" value="Enter content here" />
   <input type="submit" id="submit" value="post it!" />
 </form>
