Automatically backed up by Learn

--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,5 +1,5 @@
 <form action='/articles' method='POST'>
-  <input type="text" id="bloop" value=""
+  <input type="text" id="title" value=""
   <input type="text" id="content" value="" />
   <input type="submit" id="submit" value="post it!" />
 </form>
