--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,4 +1,6 @@
 <h1>You're editing a post!</h1>
-<form action="/articles/#{@article.id}" method="patch">
-  
+<form action="/articles/#{@article.id}" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="PATCH" />
+  <input id="title" name="title" value="#{@article.title}" />
+  <input id="content" name="content" value="#{@article.content}" />
 </form>
