--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -3,5 +3,5 @@
   <input id="hidden" type="hidden" name="_method" value="PATCH" />
   <input id="title" name="title" value="<%= @article.title %>" />
   <input id="content" name="content" value="<%= @article.content %>" />
-  <input id="submit" type="submit" value="Confirm Edit"
+  <input id="submit" type="submit" value="Save Edit"
 </form>
