--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,4 +1,4 @@
 <h1>View Post <%=@article.id%></h1>
 <h2><%=@article.title%></h2>
 <p><%=@article.content%></p>
-<button
+<button type="button" action=
