--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,5 +2,6 @@
 <h2><%=@article.title%></h2>
 <p><%=@article.content%></p>
 <form action="/articles/<%= @article.id %>" method="post">
-  <input type="submit" name="delete" value="Delete" />  
+  <input type="submit" name="delete" value="Delete" />
+  <input type="submit" 
 </form>
