--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -3,5 +3,7 @@
 <p><%=@article.content%></p>
 <form action="/articles/<%= @article.id %>" method="post">
   <input type="submit" name="delete" value="Delete" />
-  <input type="submit" 
+</form>
+<form action="/articles/" method="get">
+  <input type="submit" name="to_index" value="Back to Index" />
 </form>
