--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,7 +2,7 @@
 <h2><%=@article.title%></h2>
 <p><%=@article.content%></p>
 <form action="/articles/<%= @article.id %>" method="post">
-  <input type="hidden" id="hidden" name="_method" value="DELETE"
+  <input type="hidden" id="hidden" name="_method" value="DELETE" />
   <input type="submit" name="delete" value="Delete" />
 </form>
 <form action="/articles/" method="get">
